# vinylscrape

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_enrichment_attempted_at.py  afe5af42fb8c_initial.py  b3c4d5e6f7a8_add_og_image_url_and_slug_to_vinyl.py  c2d3e4f5a6b7_allow_multiple_urls_per_source.py  f207bff6ac77_widen_track_position_column.py
backend/vinylscrape/: config.py  di.py  main.py
backend/vinylscrape/api/: dependencies.py  router.py  schemas.py
backend/vinylscrape/db/: models.py  repositories.py  session.py
backend/vinylscrape/enrichment/: base.py  musicbrainz.py  pipeline.py  web_search.py  youtube.py
backend/vinylscrape/og/: generate_static.py  generator.py
backend/vinylscrape/scheduler/: worker.py
backend/vinylscrape/scrapers/: base.py  http.py  morevi.py  registry.py  retromania.py  vinylge.py  vodkast.py
backend/vinylscrape/storage/: s3.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/public/: sw.js
frontend/src/app/: HomeContent.tsx  apple-icon.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts
frontend/src/components/: AddToCartButton.tsx  CartIcon.tsx  ConditionBadge.tsx  FilterPanel.tsx  PriceTag.tsx  Providers.tsx  PwaController.tsx  SearchBar.tsx  VinylCard.tsx  VinylGrid.tsx  YouTubeEmbed.tsx  YouTubePlayerPopup.tsx
frontend/src/lib/: api-server.ts  api.ts  cart.tsx  youtube-player.tsx
frontend/src/types/: vinyl.ts
(+7 files in other folders)
